# thebigg.dev

./: .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: main.yml
thebigg_dev/: Cargo.toml  index.html  index.scss
thebigg_dev/src/: main.rs  msg_ctx.rs  producer.rs
thebigg_dev/src/pages/: home.rs  mod.rs  posts.rs
