[package]
name = "thebigg_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# you can check the latest version here: https://crates.io/crates/yew
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"